testsuite/gsksl/errors/no-sampler-in-variables.frag
in sampler2D t;

void
main ()
{
}
